[package]
name = "just-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
log = "0.4"
chrono = "0.4"
env_logger = "0.9"
pulldown-cmark = "0.9.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"